--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
-
   },
   "license": "MIT",
   "dependencies": {
@@ -14,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
+    "mongoose-validator": "^2.1.0",
     "nodemon": "^2.0.20"
   }
 }
